Working version
----------------
### Language features:

### Runtime system:

### Code generation and optimizations:

### Standard library:

### Other libraries:

- #10192: Add support for Unix domain sockets on Windows and use them
  to emulate Unix.socketpair (only available on Windows 1803+)
  (Antonin Décimo, review by David Allsopp)

### Tools:

### Manual and documentation:

### Compiler user-interface and warnings:

- #10328: Give more precise error when disambiguation could not possibly work.
  (Leo White, review by Gabriel Scherer and Florian Angeletti)

- #10407: Produce more detailed error messages that contain full error traces
  when module inclusion fails.
  (Antal Spector-Zabusky, review by Florian Angeletti)

### Internal/compiler-libs changes:

- #10433: Remove the distinction between 32-bit aligned and 64-bit aligned
  64-bit floats in Cmm.memory_chunk.
  (Greta Yorsh, review by Xavier Leroy)

- #10434: Pun labelled arguments with type constraint in function applications.
  (Greta Yorsh, review by Nicolas Chataing and Nicolás Ojeda Bär)

- #10470: Remove unused `cstr_normal` field from the `constructor_description`
  type
  (Nicolas Chataing, review by Gabriel Scherer)

### Build system:

### Bug fixes:

OCaml 4.13.0
-------------

### Language features:

- #9331: Improve error messages for functor application and functor types.
  (Florian Angeletti and Gabriel Radanne, review by Leo White)

- #10013: Let-punning
  Allow 'let* x in ...' and 'let%ext x in ...' as shorthand for
    'let* x = x in ...' and 'let%ext x = x in ...' respectively.
  (Stephen Dolan, review by Gabriel Scherer)

- #10441: Remove unnecessary parentheses surrounding immediate objects.
  Allow 'object ... end # f', 'f object ... end', etc.
  (Yan Dong, review by Nicolás Ojeda Bär, Florian Angeletti and Gabriel Scherer)

### Type system:

- #9584, #7074: Allow to name existentials in pattern-matching
  One can now write '(Cstr (type a) (x, y : int * a))' to give a name to