@@ -14,18 +14,22 @@
 (**************************************************************************)
 
 (* The toplevel directives. *)
-
-open Format
+type error_handler =
+  {
+    exit: int -> unit;
+    ppf: Format.formatter
+  }
+val set_error_handler: error_handler -> unit
 
 val dir_quit : unit -> unit
 val dir_directory : string -> unit
 val dir_remove_directory : string -> unit
 val dir_cd : string -> unit
-val dir_load : formatter -> string -> unit
-val dir_use : formatter -> string -> unit
-val dir_use_output : formatter -> string -> unit
-val dir_install_printer : formatter -> Longident.t -> unit
-val dir_remove_printer : formatter -> Longident.t -> unit
+val dir_load : error_handler -> string -> unit
+val dir_use : error_handler -> string -> unit
+val dir_use_output : error_handler -> string -> unit
+val dir_install_printer : error_handler -> Longident.t -> unit
+val dir_remove_printer : error_handler -> Longident.t -> unit
 
 (* These are now injected from [Topeval], for the bytecode toplevel only:
 val dir_trace : formatter -> Longident.t -> unit
@@ -48,4 +52,4 @@ type 'a printer_type_new = Format.formatter -> 'a -> unit
 type 'a printer_type_old = 'a -> unit
 
 (* Here for backwards compatibility, use [Toploop.load_file]. *)
-val[@deprecated] load_file : formatter -> string -> bool
+val[@deprecated] load_file : Format.formatter -> string -> bool
